--- a/src/scss/partials/_responsive.scss
+++ b/src/scss/partials/_responsive.scss
@@ -11,7 +11,7 @@
     position: static;
     padding: 1em;
     & .articleMeta {
-      padding: 0 .5em;
+      padding: .1em .5em;
       width: auto;
       margin: .5em;
       position: static;
